# active-call

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.cross-aarch64  Dockerfile.cross-x86_64  README.md  active-call.example.toml
.github/workflows/: docker-image.yml
config/: fillers.txt
config/playbook/: README.md  advanced_example.md  env_vars_example.md  hello.md  multi_scene.md  simple_crm.md  webhook_example.md
docs/: README.md  api.md  config_guide.en.md  config_guide.zh.md  playbook_advanced_features.en.md  playbook_advanced_features.md  playbook_tutorial.en.md  playbook_tutorial.zh.md  realtime_playbook_example.md  sip_variable_system.md  template_syntax_comparison.en.md  template_syntax_comparison.md  universal_env_vars_implementation.md
docs/en/: playbook_tutorial.md
examples/: process_audio.rs
features/: tool_instructions.en.md  tool_instructions.zh.md
src/: app.rs  config.rs  event.rs  lib.rs  locator.rs  main.rs  main_builder.rs
src/call/: active_call.rs  mod.rs  sip.rs
src/callrecord/: mod.rs
src/handler/: handler.rs  mod.rs  playbook.rs
src/media/: agc.rs  ambiance.rs  asr_processor.rs  cache.rs  denoiser.rs  dtmf.rs  engine.rs  inactivity.rs  loader.rs  mod.rs  negotiate.rs  processor.rs  realtime_processor.rs  recorder.rs  stream.rs  volume_control.rs
src/media/ringback_detection/: mod.rs  model.rs  processor.rs  telcoclassifier_body.rs
src/media/tests/: agc.rs  denoiser.rs  file_track.rs  media_pass.rs  mod.rs  perf_analysis.rs  recorder_rtp.rs  stream.rs  tts_track.rs
src/media/track/: file.rs  forwarding.rs  media_pass.rs  mod.rs  rtc.rs  track_codec.rs  tts.rs  websocket.rs
src/media/vad/: benchmark_all.rs  mod.rs  simd.rs  tests.rs  tiny_silero.rs  tiny_ten.rs  utils.rs
src/offline/supertonic/: model.rs
src/playbook/: dialogue.rs  handler.rs  mod.rs  runner.rs
src/playbook/handler/: dtmf_collector_tests.rs  mod.rs  tests.rs
src/synthesis/: aliyun.rs  deepgram.rs  mod.rs  msedge.rs  supertonic.rs
src/transcription/: aliyun.rs  deepgram.rs  mod.rs  sensevoice.rs  tencent_cloud.rs  voiceapi.rs
src/useragent/: invitation.rs  playbook_handler.rs  public_address.rs
static/: index.html
tests/: asr_pause_resume_test.rs  autohangup_headers_test.rs  autohangup_tts_test.rs  call_tests.rs  deadlock_repro.rs  hold_asr_continuity_test.rs  multi_scene_test.rs  playbook_runner_tests.rs  playbook_tests.rs  rtp_track_event_test.rs  sip_integration_test.rs  useragent_tests.rs  webrtc_vad_link_test.rs
